examples/test/testpolicy13004.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13004
  namespace: namespace287
spec:
  podSelector:
    matchLabels:
      key41: value36
      key24: value17
      key11: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value30
          key6: value37
          key36: value44
